Refactor MrXTreeNode class